--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>chandana guduru</h1>
         <h2>software engineer</h2>
+        <img.src ="image_1.jpg"
     </body>
 </html>
